--- a/index.html
+++ b/index.html
@@ -60,6 +60,16 @@
             </div>
             
         </div>
+
+        <div class="content-area-newsletter">
+            <div class="card">
+                <div class="card-text">
+                    <p class="card-header">Sign up for our newsletter!</p>
+                    <p class="card-p">Lorem ipsum dolor sit amet, consectetur adipiscing elit</p>
+                </div>
+                <button class="card-button">Sign Up</button>
+            </div>
+        </div>
     
     </div>
 
